# cyrilic-normalizer

./: README.md  pyproject.toml
tests/: test_normalizer.py
uztext/: __init__.py  mappings.py  normalizer.py
