[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uztext"
version = "0.1.0"
description = "Uzbek text normalization and Cyrillic-Latin transliteration for TTS front-ends"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["uztext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
